Atcoder/ABS/compiling_error.txt
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/ABS/ABC083B.cpp: In function 'int main()':
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/ABS/ABC083B.cpp:319:14: error: 'A' was not declared in this scope
  319 |       if(sm>=A&&sm<=B)cnt++;
      |              ^
/Users/kakeshitamasamichi/Desktop/kyopro/Atcoder/ABS/ABC083B.cpp:319:21: error: 'B' was not declared in this scope
  319 |       if(sm>=A&&sm<=B)cnt++;
      |                     ^
